Fixed styling on mobile. Just IOS left to do

--- a/src/Containers/About/About.module.scss
+++ b/src/Containers/About/About.module.scss
@@ -45,7 +45,14 @@
     }
 
     .about {
-        padding: 0;
+        padding: $mobile-padding;
+    }
+
+    .aboutTxt {
+
+        p {
+            width: auto;
+        }
     }
 }
 
